[project]
name = "sharelatex-tools"
version = "0.1.0"
description = "Tools to ShareLaTeX projects into git repos."
authors = [
    {name = "Jeffrey McGovern",email = "jeff@jdmcg.org"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
loguru = "^0.7.3"
click = "^8.3.0"
pydantic-settings = "^2.11.0"
pyoverleaf = {git = "git@github.com:jmcgover/pyoverleaf.git"}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "rust-just (>=1.43.0,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "ruff (>=0.14.2,<0.15.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "pylsp-mypy (>=0.7.0,<0.8.0)",
    "pyclean (>=3.2.0,<4.0.0)",
    "bandit (>=1.8.6,<2.0.0)"
]
